/pracと/ansのファイル内容を合致させた

--- a/Practice/client/index.html
+++ b/Practice/client/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>個人情報チェッカー</title>
+    <title>名簿アプリ</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h2>個人情報チェッカー</h2>
+    <h2>名簿アプリ</h2>
     <div class="main">
         <!-- GET メソッドを利用してユーザー情報を表示する -->
         <button onclick="fetchAllUsers()">全ユーザー表示</button>
@@ -20,13 +20,13 @@
         <!-- POST メソッドを利用してユーザー登録を行う -->
         <div class="register">
             <p>ユーザー登録</p>
-            <form id="userForm" onsubmit="handleRegister(event); return false;">
-                <label for="name">名前:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="age">年齢:</label>
-                <input type="text" id="age" name="age" required>
-                <label for="hobby">趣味:</label>
-                <input type="text" id="hobby" name="hobby" required>
+            <form id="registerForm" onsubmit="handleRegister(); return false;">
+                <label for="register-name">名前:</label>
+                <input type="text" id="register-name" name="name" required>
+                <label for="register-age">年齢:</label>
+                <input type="text" id="register-age" name="age" required>
+                <label for="register-hobby">趣味:</label>
+                <input type="text" id="register-hobby" name="hobby" required>
                 <button type="submit">登録</button>
             </form>
         </div>
@@ -34,15 +34,15 @@
         <!-- PUT メソッドを利用してユーザー情報の更新を行う -->
         <div class="change">
             <p>ユーザー情報更新</p>
-            <form id="userForm" onsubmit="handleChange(event); return false;">
-                <label for="id">id :</label>
-                <input type="text" id="id" name="id" required>
-                <label for="name">名前:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="age">年齢:</label>
-                <input type="text" id="age" name="age" required>
-                <label for="hobby">趣味:</label>
-                <input type="text" id="hobby" name="hobby" required>
+            <form id="changeForm" onsubmit="handleChange(); return false;">
+                <label for="change-id">id :</label>
+                <input type="text" id="change-id" name="id" required>
+                <label for="change-name">名前:</label>
+                <input type="text" id="change-name" name="name" required>
+                <label for="change-age">年齢:</label>
+                <input type="text" id="change-age" name="age" required>
+                <label for="change-hobby">趣味:</label>
+                <input type="text" id="change-hobby" name="hobby" required>
                 <button type="submit">更新</button>
             </form>
         </div>
@@ -51,9 +51,9 @@
         <!-- DELETE メソッドを利用してユーザー情報の削除を行う -->
         <div class="delete">
                 <p>ユーザー消去</p>
-                <form id="userForm" onsubmit="handleDelete(event); return false;">
-                    <label for="id">id:</label>
-                    <input type="text" id="id" name="id" required>
+                <form id="userForm" onsubmit="handleDelete(); return false;">
+                    <label for="delete-id">id:</label>
+                    <input type="text" id="delete-id" name="id" required>
                     <button type="submit">削除</button>
                 </form>    
         </div>
